--- a/ui/webapp/view/master.view.xml
+++ b/ui/webapp/view/master.view.xml
@@ -4,7 +4,7 @@
 			<pages>
 				<Page id="page" title="{i18n>title}">
 					<content>
-                        <Text text=" Hello world "></Text>
+                        <Text text=" Hello world This is my test apllication"></Text>
                     </content>
 				</Page>
 			</pages>
